# dotClaw

./: .gitignore  README.md  config.yaml  model_router_config.yaml  pyproject.toml
.dotclaw/: state.json
.dotclaw/agentConfig/: code-engineer.yaml  coding-assistant.yaml  content-creator.yaml  customer-service.yaml  daily-assistant.yaml  data-analyst.yaml  default.yaml  domain-expert.yaml  planner-coordinator.yaml
.github/ISSUE_TEMPLATE/: feature_request.md
Eval/: README.md  __init__.py  runner.py  stats.py
Eval/baselines/: README.md
Eval/cases/: init_perf.py  llm_stream.py  memory_perf.py  skill_load.py  stress.py  tool_dispatch.py
benchmarks/: README.md  runner.py  stats.py
benchmarks/baselines/: README.md
benchmarks/cases/: __init__.py  init_perf.py  llm_stream.py  memory_perf.py  skill_load.py  stress.py  tool_dispatch.py
docs/: architecture-and-roadmap.md  architecture.md  development-prompt.md  heartroad.md  phase2-roadmap.md  phase3-roadmap-review.md  phase4-record.md  phase4-roadmap.md  phase5-codeReview.md  phase5-record.md  phase5-roadmap-review.md  phase5-roadmap.md
docs/Development/: architecture-and-roadmap.md  architecture.md  test-migration.md  todo.md
docs/arch/: memory-architecture.md  skills-architecture.md  tools-architecture.md
docs/phase11-data-statistics/: data-statistics-design.md  data-statistics-requirements.md  findings.md  progress.md  task_plan.md
docs/phase2/: phase2-roadmap-review.md  phase2-roadmap.md
docs/phase3/: phase3-roadmap-review2.md
docs/phase4/: phase4-roadmap-review2.md
docs/phase5/: phase5-roadmap.md
docs/phase6/: phase6-codeReview.md  phase6-record.md  phase6-roadmap-review2.md  phase6-roadmap.md
docs/phase7/: phase7-record.md  phase7-roadmap-review2.md  phase7-roadmap.md
docs/prompt/: development-prompt.md
docs/ref/: Codex CLI 上下文工程与压缩机制源码解读.md
docs/wiki/: LLM 模块总体说明.md  Memory 模块总体说明.md  Runtime 持久化架构.md  Runtime 模块总体说明.md  Tool 模块总体说明.md  agent在工程广义的共性与差异.md  runtime执行机.md  上下文工程说明.md  恢复模块：中断与挂起.md  整体串讲.md
scripts/: __init__.py  generate_benchmark_dataset.py  migrate_agent_run_v1_to_v2.py  migrate_messages_v1_to_v2.py
skills/_example/: SKILL.md
src/dotclaw/: __init__.py  __main__.py  _pkg.py  main.py
tests/: test_agent_tracer.py  test_main_cli_options.py  test_phase1_acceptance.py  test_phase2_acceptance.py  test_phase3_acceptance.py  test_phase4_acceptance.py  test_phase5_acceptance.py  test_phase6_acceptance.py  test_phase7_acceptance.py
tests/agent/: test_artifact.py  test_identity.py  test_messaging.py  test_registry.py  test_resume.py  test_runtime.py  test_runtime_derive.py  test_task.py
tests/channel/: test_llm_output_adapter.py  test_null.py
tests/context/: test_context_contract.py  test_message_utils.py  test_slot.py  test_slots.py
tests/journal/: test_history_state.py  test_journal.py
tests/llm/: test_chat_chunk_contract.py  test_model_router_contract.py  test_openai_compat_stream.py  test_reasoning_config.py  test_reasoning_parser.py
tests/metrics/: test_builder.py  test_collector.py  test_snapshot.py  test_storage.py
tests/orchestration/: test_handle.py  (+5 more)
(+341 files in other folders)
