[project]
name = "dotclaw"
version = "0.1.0"
description = "A lightweight AI Agent framework for learning AI application development."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "dotClaw Author" }
]

dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "numpy>=1.26.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dotclaw = "dotclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotclaw"]
