[project]
name = "dotclaw"
version = "0.5.0"
description = "A lightweight AI Agent framework for learning AI application development."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "dotClaw Author" }
]

dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "numpy>=1.26.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dotclaw = "dotclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotclaw"]

[tool.pytest.ini_options]
# 默认只收集已迁移到当前 Runtime 架构的测试。
# 根目录下的 Phase 1/3/4/7 与 metrics 测试保留为历史迁移资料，
# 在完成等价测试迁移前不应阻断当前架构的开发。
testpaths = [
    "tests/agent",
    "tests/channel",
    "tests/context",
    "tests/journal",
    "tests/llm",
    "tests/orchestration",
    "tests/runtime",
    "tests/session",
]
asyncio_mode = "auto"
