[project]
name = "dotclaw"
version = "0.5.0"
description = "A lightweight AI Agent framework for learning AI application development."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "dotClaw Author" }
]

dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "numpy>=1.26.0",
    "pydantic>=2.0",
    "mcp>=1.0.0",
    "tiktoken>=0.8.0",
    "httpx>=0.27.0",
    "simpleeval>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dotclaw = "dotclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotclaw"]

[tool.pytest.ini_options]
# 默认只收集当前架构和 Runtime v2 的测试。
# 历史测试使用 legacy 标记隔离；执行迁移验证时可显式传入 -m legacy。
testpaths = [
    "tests/agent",
    "tests/channel",
    "tests/context",
    "tests/journal",
    "tests/llm",
    "tests/orchestration",
    "tests/runtime",
    "tests/runtime_v2",
    "tests/session",
    "tests/tools",
]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-m 'not legacy'"
markers = [
    "legacy: 依赖已废弃接口、仅用于迁移对照的历史测试。",
    "phase0_contract: ApplicationHost 收口开发计划阶段0的基线契约测试；当前实现尚未收口，按待迁移标记 xfail。",
]
